--- a/app/globals.css
+++ b/app/globals.css
@@ -79,3 +79,54 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+/* From Uiverse.io by kamehame-ha */ 
+.cards-1 {
+  display: flex;
+  flex-direction: row;
+  gap: 55px;
+}
+
+.cards-1 .red {
+  background-color: #f43f5e;
+}
+
+.cards-1 .blue {
+  background-color: #3b82f6;
+}
+
+.cards-1 .green {
+  background-color: #22c55e;
+}
+
+.cards-1 .card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  height: 200px;
+  width: 300px;
+  border-radius: 10px;
+  color: white;
+  cursor: pointer;
+  transition: 400ms;
+}
+
+.cards-1 .card p.tip {
+  font-size: 1em;
+  font-weight: 700;
+}
+
+.cards-1 .card p.second-text {
+  font-size: .7em;
+}
+
+.cards-1 .card:hover {
+  transform: scale(1.1, 1.1);
+}
+
+.cards-1:hover > .card:not(:hover) {
+  filter: blur(10px);
+  transform: scale(0.9, 0.9);
+}
